# lib/db/src/schema/index.ts
@@ -4,3 +4,4 @@ export * from "./price_history";
 export * from "./opportunities";
 export * from "./alerts";
 export * from "./plans";
+export * from "./payment_info";
